--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-responsive-masonry": "^2.1.7"
   }
 }
